--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Ignore SASS caches
 .sass-cache
+
+# Ignore folder where static template code and assets are generated
 dist
+
+# Ignore Go dependencies.
 node_modules
