--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-imagemin": "^0.8.1",
     "grunt-contrib-jade": "^0.13.0",
     "grunt-contrib-sass": "^0.8.1",
