--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0"
   }
 }
