--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Ignore OS X system files
 .DS_Store
 
+# Ignore folder where static template code and assets are generated
+dist
+
 # Ignore Go dependencies.
 node_modules
