--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.1",
-    "gulp-handlebars": "^5.0.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-nodemon": "^2.2.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0"
   }
 }
