--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
