--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "pump": "^3.0.0"
   }
 }
