--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My curriculum vitae web application.",
   "main": "index.js",
   "scripts": {
+    "start": "node app/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
