--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app/app.js",
+    "postinstall": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
