--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "My curriculum vitae web application.",
   "main": "index.js",
+  "engines" : {
+    "node" : "8.11.2" 
+  },
   "scripts": {
     "start": "node app/app.js",
     "postinstall": "gulp build",
