--- a/package.json
+++ b/package.json
@@ -22,30 +22,30 @@
   },
   "homepage": "https://gitlab.com/hellorich/richcookson.info#readme",
   "dependencies": {
-    "@babel/core": "7.2.2",
-    "@babel/preset-env": "7.3.1",
-    "babelify": "10.0.0",
-    "browser-sync": "2.26.7",
-    "browserify": "16.2.3",
-    "compression": "1.7.4",
-    "del": "3.0.0",
-    "express": "4.16.4",
-    "gulp": "4.0.0",
-    "gulp-autoprefixer": "6.0.0",
-    "gulp-babel": "8.0.0",
-    "gulp-compile-handlebars": "0.6.1",
-    "gulp-concat": "2.6.1",
-    "gulp-ext-replace": "0.3.0",
-    "gulp-imagemin": "5.0.3",
-    "gulp-sass": "4.0.2",
-    "gulp-sass-lint": "1.4.0",
-    "gulp-sourcemaps": "2.6.4",
-    "gulp-standard": "12.0.0",
-    "gulp-uglify": "3.0.1",
-    "helmet": "3.21.2",
-    "heroku-ssl-redirect": "0.0.4",
-    "imagemin-pngquant": "7.0.0",
-    "vinyl-buffer": "1.0.1",
-    "vinyl-source-stream": "2.0.0"
+    "@babel/core": "7.6.4",
+    "@babel/preset-env": "7.6.3",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.26.7",
+    "browserify": "16.5.0",
+    "compression": "^1.7.4",
+    "del": "5.1.0",
+    "express": "4.17.1",
+    "gulp": "4.0.2",
+    "gulp-autoprefixer": "6.1.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-compile-handlebars": "^0.6.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-ext-replace": "^0.3.0",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-sass": "^4.0.2",
+    "gulp-sass-lint": "^1.4.0",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-standard": "^12.0.0",
+    "gulp-uglify": "3.0.2",
+    "helmet": "^3.21.2",
+    "heroku-ssl-redirect": "^0.0.4",
+    "imagemin-pngquant": "^7.0.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
