--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.1",
     "gulp-ext-replace": "^0.3.0",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-imagemin": "6.1.1",
     "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "2.6.5",
