--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "gulp-uglify": "3.0.2",
     "helmet": "^3.21.2",
     "heroku-ssl-redirect": "^0.0.4",
-    "imagemin-pngquant": "^7.0.0",
+    "imagemin-pngquant": "8.0.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   }
