--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "2.6.5",
-    "gulp-standard": "^12.0.0",
+    "gulp-standard": "14.0.0",
     "gulp-uglify": "3.0.2",
     "helmet": "^3.21.2",
     "heroku-ssl-redirect": "^0.0.4",
