--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev --no-open -p 6007",
     "build-storybook": "storybook build"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.4.0",
     "@storybook/addon-essentials": "^7.4.0",
     "@storybook/addon-interactions": "^7.4.0",
     "@storybook/addon-links": "^7.4.0",
