--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@storybook/testing-library": "^0.2.0",
     "chromatic": "^7.0.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "sass": "^1.66.1",
     "storybook": "^7.4.0"
   },
   "readme": "ERROR: No README data found!",
