--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-		"test": "jest --watch",
+    "test": "jest --watch",
+		"test-storybook": "test-storybook",
     "storybook": "storybook dev --no-open -p 6007",
     "build-storybook": "storybook build",
     "chromatic": "chromatic --exit-zero-on-changes --exit-once-uploaded"
@@ -32,6 +33,7 @@
     "@storybook/blocks": "^7.4.0",
     "@storybook/nextjs": "^7.4.0",
     "@storybook/react": "^7.4.0",
+    "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
