--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "test": "jest --watch",
     "test-storybook": "test-storybook --url http://localhost:6007",
+		"test-storybook:coverage": "test-storybook --url http://localhost:6007 --coverage",
     "storybook": "storybook dev --no-open -p 6007",
     "build-storybook": "storybook build",
     "chromatic": "chromatic --exit-zero-on-changes --exit-once-uploaded"
