--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.66.1",
-    "storybook": "^7.6.7"
+    "storybook": "^7.6.7",
+    "storybook-addon-pseudo-states": "^2.1.2"
   },
   "readme": "ERROR: No README data found!",
   "_id": "richcookson.info@0.1.0"
