--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-next": "^14.1.0",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "typescript": "5.2.2"
   },
