--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.2.25",
     "@storybook/addon-a11y": "^8.0.4",
     "@storybook/addon-coverage": "^1.0.1",
     "@storybook/addon-essentials": "^8.0.4",
