--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "chrome-aws-lambda": "^10.1.0",
     "clsx": "^2.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.1.0",
     "next": "^14.1.0",
+    "playwright-core": "^1.45.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
