--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.1.0",
+    "file-saver": "^2.0.5",
     "next": "^14.1.0",
     "playwright-core": "^1.45.1",
     "react": "^18.2.0",
@@ -46,6 +47,7 @@
     "@storybook/test-runner": "^0.17.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/file-saver": "^2.0.7",
     "chromatic": "^7.0.0",
     "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
