--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "chromatic": "chromatic --exit-zero-on-changes --exit-once-uploaded"
   },
   "dependencies": {
+    "@sparticuz/chromium-min": "^123.0.1",
     "@storybook/test": "^8.0.4",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "chrome-aws-lambda": "^10.1.0",
     "clsx": "^2.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.1.0",
