--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint-config-next": "^14.1.0",
     "file-saver": "^2.0.5",
     "next": "^14.1.0",
-    "playwright-core": "^1.45.1",
+    "puppeteer-core": "^22.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
